# opengl

./: .gitignore  makefile
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
src/: CMakeLists.txt  main.c  main.cc
